[tool.poetry]
name = "barbucket"
version = "0.3"
description = ""
authors = ["Martin Creutzenberg <reach_me_on_github@invalid.com>"]
readme = "README.md"
packages = [{include = "beautifulsoup4"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
enlighten = "^1.11.1"
ib-insync = "^0.9.79"
numpy = "^1.23.5"
pandas = "^1.5.2"
psycopg2-binary = "^2.9.5"
requests = "^2.28.1"
sqlalchemy = "^1.4.44"
trading-calendars = "^2.1.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"
build = "^0.9.0"
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.11"
mypy = "^0.991"
pylint = "^2.15.7"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
rope = "^1.5.1"
setuptools = "^65.6.3"
twine = "^4.0.2"
types-requests = "^2.28.11.5"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
